--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>AWA</title>
+  <title>AWA TEST</title>
   
   <link rel="stylesheet" href="css/reset.css"/>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-responsive.min.css" >
