Added jQuery dynamic date functionality to bargraph days

--- a/app/index.html
+++ b/app/index.html
@@ -32,136 +32,136 @@
 	</header>
 	<div class="mainCalendar">
 		<div class="day">
-			<div class="name">Mon</div>
+			<div class="weekdayname name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Tue</div>
+			<div class="weekdaytwo name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Wed</div>
+			<div class="weekdaythree name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Thu</div>
+			<div class="weekdayfour name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Fri</div>
+			<div class="weekdayfive name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Sat</div>
+			<div class="weekdaysix name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Sun</div>
+			<div class="weekdayseven name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		
 		<div class="day">
-			<div class="name">Mon</div>
+			<div class="weekdayname name"></div>
 			<div class="bar">
 				<div class="fill" style="height:25%"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Tue</div>
+			<div class="weekdaytwo name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Wed</div>
+			<div class="weekdaythree name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day current">
-			<div class="name">Thu</div>
+			<div class="weekdayfour name"></div>
 			<div class="bar">
 				<div class="fill style="height:45%""></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Fri</div>
+			<div class="weekdayfive name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Sat</div>
+			<div class="weekdaysix name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Sun</div>
+			<div class="weekdayseven name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		
 		<div class="day">
-			<div class="name">Mon</div>
+			<div class="weekdayname name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Tue</div>
+			<div class="weekdaytwo name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Wed</div>
+			<div class="weekdaythree name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Thu</div>
+			<div class="weekdayfour name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Fri</div>
+			<div class="weekdayfive name"></div>
 			<div class="bar">
 				<div class="fill" style="height:75%"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Sat</div>
+			<div class="weekdaysix name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		<div class="day">
-			<div class="name">Sun</div>
+			<div class="weekdayseven name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
 		</div>
 		
 		<div class="day">
-			<div class="name">Mon</div>
+			<div class="weekdayname name"></div>
 			<div class="bar">
 				<div class="fill"></div>
 			</div>
