edited scrollable area.

--- a/app/index.html
+++ b/app/index.html
@@ -243,7 +243,7 @@
 				<div class="dropdown inline span"></div>
 				<div class="pin inline span"><img src="img/tack.png" alt=""></div>
 			</div>
-			<div class="list scrollable">
+			<div class="list">
 				<div class="sort">
 					<div class="sortBy abType row">
 						<div class="span" style="margin-left:0;">
@@ -256,7 +256,7 @@
 							<option value="Option 2">Option 2</option>
 						</div>
 					</div>
-					<div class="cards">
+					<div class="cards scrollable">
 						<div class="nameCard">
 							<ul class="highab">
 								<li>DAVID WALKER</li>
@@ -347,7 +347,7 @@
 				<div class="dropdown inline span margin-left-none"></div>
 				<div class="pin inline span"><img src="img/tack.png" alt=""></div>
 			</div>
-			<div class="list scrollable">
+			<div class="list">
 				<div class="sort">
 					<div class="sortBy abType row">
 						<div class="span" style="margin-left:0;">
@@ -357,7 +357,7 @@
 						<div class="dropdown span1" style="float:right;"><a href="javascript:;"></a>
 						</div>
 					</div>
-					<div class="cards">
+					<div class="cards scrollable">
 						<div class="nameCard">
 							<ul class="noab">
 								<li>JOHN ANDERSON</li>
