--- a/app/index.html
+++ b/app/index.html
@@ -181,7 +181,7 @@
 				</td>
 				<td class="wideSpan divider">
 					<div class="title">Absence<br/> Rate</div>
-					<div class="absenceRate result"><div class="up"></div>25 %</div>
+					<div class="absenceRate result"><div class="up"><span><img src="img/arrowUp.png" alt=""></span></div>25 <span class="smTxt">%</span></div>
 				</td>
 				<td class="wideSpan divider">
 					<div class="title">Employees<br/> Absent</div>
@@ -202,10 +202,10 @@
 	</div>
 	<div class="bodyContent row">
 		
-		<div id="Absence" class="widget span3">
+		<div id="Absence" class="widget span4">
 			<div class="head block row">
-				<div class="title inline span">Absence: types</div>
-				<div class="dropdown inline span"><a href="javascript:;"></a></div>
+				<div class="title inline span">ABSENCE: TYPES</div>
+				<div class="dropdownTitle inline span"><a href="javascript:;"></a></div>
 				<div class="pin inline span"><img src="img/tack.png" alt=""></div>
 			</div>
 			<div class="graph piechart block">
@@ -215,8 +215,8 @@
 				<div class="sort">
 					<div class="sortBy row">
 						<div class="span" style="margin-left:0;">
-							<span class="label">Sort By:</span>
-							<span class="order">highest to lowest</span>
+							<span class="label">SORT BY:</span>
+							<span class="order">HIGHEST TO LOWEST</span>
 						</div>
 						<div class="dropdown span1" style="float:right;"><a href="javascript:;"></a>
 							<option value=""></option>
@@ -226,28 +226,38 @@
 					</div>
 					<div class="filtering">
 						<ul>
-							<li><span class="label">Vacation |</span> 35% - 04 - $250</li>
-							<li><span class="label">OTHER |</span> 27% - 04 - $250</li>
-							<li><span class="label">FMLA |</span> 30% - 03 - $250</li>
-							<li><span class="label">STD |</span> 04% - 04 - $250</li>
-							<li><span class="label">LTD |</span> 04% - 04 - $250</li>
+							<li><span class="label">Vacation |</span> 35% - 04 - $250
+								<img src="img/arrowRight.png" alt="Right Arrow">
+							</li>
+							<li><span class="label">Other |</span> 27% - 04 - $250
+								<img src="img/arrowRight.png" alt="Right Arrow">
+							</li>
+							<li><span class="label">FMLA |</span> 30% - 03 - $250
+								<img src="img/arrowRight.png" alt="Right Arrow">
+							</li>
+							<li><span class="label">STD |</span> 04% - 04 - $250
+								<img src="img/arrowRight.png" alt="Right Arrow">
+							</li>
+							<li><span class="label">LTD |</span> 04% - 04 - $250
+								<img src="img/arrowRight.png" alt="Right Arrow">
+							</li>
 						</ul>
 					</div>
 				</div>
 				
 			</div>
 		</div>
-		<div id="upAbsence" class="widget span3">
+		<div id="upAbsence" class="widget span4">
 			<div class="head block row">
-				<div class="title inline span">Unplanned Absence: (5)</div>
-				<div class="dropdown inline span"></div>
+				<div class="title inline span">UNPLANNED ABSENCE: (5)</div>
+				<div class="dropdownTitle inline span"></div>
 				<div class="pin inline span"><img src="img/tack.png" alt=""></div>
 			</div>
 			<div class="list">
 				<div class="sort">
 					<div class="sortBy abType row">
 						<div class="span" style="margin-left:0;">
-							<span class="label">Sort By:</span>
+							<span class="label">SORT BY:</span>
 							<span class="order">ABSENCE RISK</span>
 						</div>
 						<div class="dropdown span1" style="float:right;"><a href="javascript:;"></a>
@@ -258,100 +268,124 @@
 					</div>
 					<div class="cards scrollable">
 						<div class="nameCard">
-							<ul class="highab">
-								<li>DAVID WALKER</li>
-								<li>INJURED ON THE JOB - 5 DAYS</li>
-								<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
-								<li>
-									<ul class="icons row">
-										<li class="span"><img src="img/weight.png" alt="weight"></li>
-										<li class="span nudge"><img src="img/calculator.png" alt="calculator"></li>
-										<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
-										<li class="span"><img src="img/razor.png" alt="razor"></li>
-									</ul>
-								</li>
-							</ul>
-							<ul class="medab">
-								<li>JANET BENES</li>
-								<li>OTHER - 4 DAYS <span class="helpIcon"></span></li>
-								<li class="smTxt">ROLE: WAREHOUSE CLERK</li>
-								<li>
-									<ul class="icons row">
-										<li class="span"><img src="img/calculator.png" alt="calculator"></li>
-										<li class="span"><img src="img/phone.png" alt="phone"></li>
-										<li class="span"><img src="img/folder.png" alt="folder"></li>
-									</ul>
-								</li>
-							</ul>
-							<ul class="lowab">
-								<li>CHRIS MARROTA</li>
-								<li>SICK - 2 DAYS <span class="helpIcon"></span></li>
-								<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
-								<li>
-									<ul class="icons row">
-										<li class="span"><img src="img/weight.png" alt="weight"></li>
-										<li class="span nudge"><img src="img/calculator.png" alt="calculator"></li>
-										<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
-										<li class="span"><img src="img/razor.png" alt="razor"></li>
-									</ul>
-								</li>
-							</ul>
-							<ul class="lowab">
-								<li>LIVIA VENEZIANO</li>
-								<li>SICK - 1 DAY</li>
-								<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
-								<li>
-									<ul class="icons row">
-										<li class="span"><img src="img/weight.png" alt="weight"></li>
-										<li class="span nudge"><img src="img/calculator.png" alt="calculator"></li>
-										<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
-										<li class="span"><img src="img/razor.png" alt="razor"></li>
-									</ul>
-								</li>
-							</ul>
-							<ul class="lowab">
-								<li>CHRIS MARROTA</li>
-								<li>SICK - 2 DAYS <span class="helpIcon"></span></li>
-								<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
-								<li>
-									<ul class="icons row">
-										<li class="span"><img src="img/weight.png" alt="weight"></li>
-										<li class="span nudge"><img src="img/calculator.png" alt="calculator"></li>
-										<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
-										<li class="span"><img src="img/razor.png" alt="razor"></li>
-									</ul>
-								</li>
-							</ul>
-							<ul class="lowab">
-								<li>LIVIA VENEZIANO</li>
-								<li>SICK - 1 DAY</li>
-								<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
-								<li>
-									<ul class="icons row">
-										<li class="span"><img src="img/weight.png" alt="weight"></li>
-										<li class="span nudge"><img src="img/calculator.png" alt="calculator"></li>
-										<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
-										<li class="span"><img src="img/razor.png" alt="razor"></li>
-									</ul>
-								</li>
-							</ul>
+							<div class="">
+								<ul class="highab">
+									<li class="label">DAVID WALKER</li>
+									<li>INJURED ON THE JOB - 5 DAYS
+										<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+									</li>
+									<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
+									<li>
+										<ul class="icons row">
+											<li class="span"><img src="img/weight.png" alt="weight"></li>
+											<li class="nobw span nudge"><img src="img/calculator.png" alt="calculator"></li>
+											<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
+											<li class="span"><img src="img/razor.png" alt="razor"></li>
+										</ul>
+									</li>
+								</ul>
+							</div>
+							<div class="">
+								<ul class="medab">
+									<li class="label">JANET BENES</li>
+									<li>OTHER - 4 DAYS <span class="helpIcon"><img src="img/helpCounter.png" alt=""></span>
+										<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+									</li>
+									<li class="smTxt">ROLE: WAREHOUSE CLERK</li>
+									<li>
+										<ul class="icons row">
+											<li class="span"><img src="img/calculator.png" alt="calculator"></li>
+											<li class="nobw span"><img src="img/phone.png" alt="phone"></li>
+											<li class="span"><img src="img/folder.png" alt="folder"></li>
+										</ul>
+									</li>
+								</ul>
+							</div>
+							<div class="">
+								<ul class="lowab">
+									<li class="label">CHRIS MARROTA</li>
+									<li>SICK - 2 DAYS <span class="helpIcon"><img src="img/helpCounter.png" alt=""></span>
+										<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+									</li>
+									<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
+									<li>
+										<ul class="icons row">
+											<li class="span"><img src="img/weight.png" alt="weight"></li>
+											<li class="nobw span nudge"><img src="img/calculator.png" alt="calculator"></li>
+											<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
+											<li class="span"><img src="img/razor.png" alt="razor"></li>
+										</ul>
+									</li>
+								</ul>
+							</div>
+							<div class="">
+								<ul class="lowab">
+									<li class="label">LIVIA VENEZIANO</li>
+									<li>SICK - 1 DAY
+										<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+									</li>
+									<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
+									<li>
+										<ul class="icons row">
+											<li class="span"><img src="img/weight.png" alt="weight"></li>
+											<li class="nobw span nudge"><img src="img/calculator.png" alt="calculator"></li>
+											<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
+											<li class="span"><img src="img/razor.png" alt="razor"></li>
+										</ul>
+									</li>
+								</ul>
+							</div>
+							<div class="">
+								<ul class="lowab">
+									<li class="label">CHRIS MARROTA</li>
+									<li>SICK - 2 DAYS <span class="helpIcon"></span>
+										<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+									</li>
+									<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
+									<li>
+										<ul class="icons row">
+											<li class="span"><img src="img/weight.png" alt="weight"></li>
+											<li class="nobw span nudge"><img src="img/calculator.png" alt="calculator"></li>
+											<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
+											<li class="span"><img src="img/razor.png" alt="razor"></li>
+										</ul>
+									</li>
+								</ul>
+							</div>
+							<div class="">
+								<ul class="lowab">
+									<li class="label">LIVIA VENEZIANO</li>
+									<li>SICK - 1 DAY
+										<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+									</li>
+									<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
+									<li>
+										<ul class="icons row">
+											<li class="span"><img src="img/weight.png" alt="weight"></li>
+											<li class="nobw span nudge"><img src="img/calculator.png" alt="calculator"></li>
+											<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
+											<li class="span"><img src="img/razor.png" alt="razor"></li>
+										</ul>
+									</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
 				
 			</div>
 		</div>
-		<div id="pAbsence" class="widget span3">
+		<div id="pAbsence" class="widget span4">
 			<div class="head block row">
-				<div class="title inline span">Planned Absence: types</div>
-				<div class="dropdown inline span margin-left-none"></div>
+				<div class="title inline span">PLANNED ABSENCE: TYPES</div>
+				<div class="dropdownTitle inline span margin-left-none"></div>
 				<div class="pin inline span"><img src="img/tack.png" alt=""></div>
 			</div>
 			<div class="list">
 				<div class="sort">
 					<div class="sortBy abType row">
 						<div class="span" style="margin-left:0;">
-							<span class="label">Sort By:</span>
+							<span class="label">SORT BY:</span>
 							<span class="order">ABSENCE RISK</span>
 						</div>
 						<div class="dropdown span1" style="float:right;"><a href="javascript:;"></a>
@@ -361,13 +395,13 @@
 						<div class="nameCard">
 
                             <ul class="noab" style="border-bottom: none;" ng-repeat="elem in dataset">
-                                <li>{{ elem.employee_name }}</li>
-                                <li>{{ elem.leave_reason }} - {{ calculateDifferenceInDays( elem.leave_start_date , elem.leave_end_date ) }}</li>
+                                <li class="label upcs">{{ elem.employee_name }}</li>
+                                <li class="upcs">{{ elem.leave_reason }} - {{ calculateDifferenceInDays( elem.leave_start_date , elem.leave_end_date ) }}<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow"></li>
                                 <li class="smTxt">{{ 'Role: WAREHOUSE ASSOCIATE' }}</li>
 
                                 <ul class="icons row">
                                     <li class="span"><img src="img/weight.png" alt="weight"></li>
-                                    <li class="span nudge"><img src="img/calculator.png" alt="calculator"></li>
+                                    <li class="span nudge nobw"><img src="img/calculator.png" alt="calculator"></li>
                                     <li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
                                     <li class="span"><img src="img/razor.png" alt="razor"></li>
                                 </ul>
@@ -377,8 +411,10 @@
 
 							<!--original markup
 							<ul class="noab">
-								<li>JOHN ANDERSON</li>
-								<li>FMLA - 5 DAYS</li>
+								<li class="label">JOHN ANDERSON</li>
+								<li>FMLA - 5 DAYS
+									<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+								</li>
 								<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
 								<li>
 									<ul class="icons row">
@@ -390,8 +426,10 @@
 								</li>
 							</ul>
 							<ul class="noab">
-								<li>CHARLIE GOWER</li>
-								<li>STD - 4 DAYS</li>
+								<li class="label">CHARLIE GOWER</li>
+								<li>STD - 4 DAYS
+									<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+								</li>
 								<li class="smTxt">ROLE: WAREHOUSE CLERK</li>
 								<li>
 									<ul class="icons row">
@@ -402,8 +440,10 @@
 								</li>
 							</ul>
 							<ul class="noab">
-								<li>RYAN GALLAGHER</li>
-								<li>FMLA - 3 DAYS</li>
+								<li class="label">RYAN GALLAGHER</li>
+								<li>FMLA - 3 DAYS
+									<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+								</li>
 								<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
 								<li>
 									<ul class="icons row">
@@ -415,8 +455,10 @@
 								</li>
 							</ul>
 							<ul class="noab">
-								<li>PRASHANT AGARWAL</li>
-								<li>FMLA - 2 DAYS</li>
+								<li class="label">PRASHANT AGARWAL</li>
+								<li>FMLA - 2 DAYS
+									<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+								</li>
 								<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
 								<li>
 									<ul class="icons row">
