--- a/app/index.html
+++ b/app/index.html
@@ -383,17 +383,23 @@
 					<div class="sortBy abType row">
 						<div class="span" style="margin-left:0;">
 							<span class="label">SORT BY:</span>
-							<span class="order">ABSENCE RISK</span>
+							<!--<span class="order">ABSENCE RISK</span>-->
 						</div>
 						<div class="dropdown span1" style="float:right;"><a href="javascript:;"></a>
 						</div>
+                        <select ng-model="orderProp">
+                            <option value="employee_name">Name</option>
+                            <option value="leave_days">Duration</option>
+                            <option value="leave_reason">Absence Type</option>
+                            <option value="leave_status">Status</option>
+                        </select>
 					</div>
 					<div class="cards scrollable">
 						<div class="nameCard">
 
-                            <ul class="noab" style="border-bottom: none;" ng-repeat="elem in dataset">
+                            <ul class="noab" style="border-bottom: none;" ng-repeat="elem in dataset | orderBy:orderProp">
                                 <li class="label upcs">{{ elem.employee_name }}</li>
-                                <li class="upcs">{{ isFmla(elem) }} - {{ calculateDifferenceInDays( elem.leave_start_date , elem.leave_end_date ) }}<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow"></li>
+                                <li class="upcs">{{ isFmla(elem) }} - {{ isDays(elem.leave_days) }}<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow"></li>
                                 <li class="smTxt">{{ 'Role: WAREHOUSE ASSOCIATE' }}</li>
 
                                 <ul class="icons row">
@@ -403,67 +409,6 @@
                                     <li class="span"><img src="img/razor.png" alt="razor"></li>
                                 </ul>
                             </ul>
-
-							<!--original markup
-							<ul class="noab">
-								<li class="label">JOHN ANDERSON</li>
-								<li>FMLA - 5 DAYS
-									<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
-								</li>
-								<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
-								<li>
-									<ul class="icons row">
-										<li class="span"><img src="img/weight.png" alt="weight"></li>
-										<li class="span nudge"><img src="img/calculator.png" alt="calculator"></li>
-										<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
-										<li class="span"><img src="img/razor.png" alt="razor"></li>
-									</ul>
-								</li>
-							</ul>
-							<ul class="noab">
-								<li class="label">CHARLIE GOWER</li>
-								<li>STD - 4 DAYS
-									<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
-								</li>
-								<li class="smTxt">ROLE: WAREHOUSE CLERK</li>
-								<li>
-									<ul class="icons row">
-										<li class="span"><img src="img/calculator.png" alt="calculator"></li>
-										<li class="span"><img src="img/phone.png" alt="phone"></li>
-										<li class="span"><img src="img/folder.png" alt="folder"></li>
-									</ul>
-								</li>
-							</ul>
-							<ul class="noab">
-								<li class="label">RYAN GALLAGHER</li>
-								<li>FMLA - 3 DAYS
-									<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
-								</li>
-								<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
-								<li>
-									<ul class="icons row">
-										<li class="span"><img src="img/weight.png" alt="weight"></li>
-										<li class="span nudge"><img src="img/calculator.png" alt="calculator"></li>
-										<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
-										<li class="span"><img src="img/razor.png" alt="razor"></li>
-									</ul>
-								</li>
-							</ul>
-							<ul class="noab">
-								<li class="label">PRASHANT AGARWAL</li>
-								<li>FMLA - 2 DAYS
-									<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
-								</li>
-								<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
-								<li>
-									<ul class="icons row">
-										<li class="span"><img src="img/weight.png" alt="weight"></li>
-										<li class="span nudge"><img src="img/calculator.png" alt="calculator"></li>
-										<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
-										<li class="span"><img src="img/razor.png" alt="razor"></li>
-									</ul>
-								</li>
-							</ul>-->
 						</div>
 					</div>
 				</div>
