Added CSS Dropdown Menu

--- a/app/index.html
+++ b/app/index.html
@@ -257,7 +257,18 @@
 							<span class="label">SORT BY:</span>
 							<span class="order">ABSENCE RISK</span>
 						</div>
-						<div class="dropdown span1" style="float:right;"><a href="javascript:;"></a>
+						<div class="dropdown span1" style="float:right;">
+							<ul class="cssnav">
+								<li>
+									<a href="#"></a>
+									<ul>
+										<li><a href="#">One</a></li>
+							            <li><a href="#">Two</a></li>
+							            <li><a href="#">Three</a></li>
+							            <li><a href="#">Four</a></li>
+									</ul>
+								</li>
+							</ul>
 							<!--<option value=""></option>
 							<option value="Option 1">Option 1</option>
 							<option value="Option 2">Option 2</option> -->
