fixed the color seperation on the border

--- a/app/index.html
+++ b/app/index.html
@@ -262,7 +262,7 @@
 					</div>
 					<div class="cards scrollable">
 						<div class="nameCard">
-							<div class="">
+							<div class="abBorder">
 								<ul class="highab">
 									<li class="label">DAVID WALKER</li>
 									<li>INJURED ON THE JOB - 5 DAYS
@@ -279,7 +279,7 @@
 									</li>
 								</ul>
 							</div>
-							<div class="">
+							<div class="abBorder">
 								<ul class="medab">
 									<li class="label">JANET BENES</li>
 									<li>OTHER - 4 DAYS <span class="helpIcon"><img src="img/helpCounter.png" alt=""></span>
@@ -295,7 +295,7 @@
 									</li>
 								</ul>
 							</div>
-							<div class="">
+							<div class="abBorder">
 								<ul class="lowab">
 									<li class="label">CHRIS MARROTA</li>
 									<li>SICK - 2 DAYS <span class="helpIcon"><img src="img/helpCounter.png" alt=""></span>
@@ -312,7 +312,7 @@
 									</li>
 								</ul>
 							</div>
-							<div class="">
+							<div class="abBorder">
 								<ul class="lowab">
 									<li class="label">LIVIA VENEZIANO</li>
 									<li>SICK - 1 DAY
@@ -329,7 +329,7 @@
 									</li>
 								</ul>
 							</div>
-							<div class="">
+							<div class="abBorder">
 								<ul class="lowab">
 									<li class="label">CHRIS MARROTA</li>
 									<li>SICK - 2 DAYS <span class="helpIcon"></span>
@@ -346,7 +346,7 @@
 									</li>
 								</ul>
 							</div>
-							<div class="">
+							<div class="abBorder">
 								<ul class="lowab">
 									<li class="label">LIVIA VENEZIANO</li>
 									<li>SICK - 1 DAY
