Added img sprite, added img class naming convention, and implemented img classes instead of img tags for easier usability later.

--- a/app/index.html
+++ b/app/index.html
@@ -181,7 +181,7 @@
 				</td>
 				<td class="wideSpan divider">
 					<div class="title">Absence<br/> Rate</div>
-					<div class="absenceRate result"><div class="up"><span><img src="img/arrowUp.png" alt=""></span></div>25 <span class="smTxt">%</span></div>
+					<div class="absenceRate result"><div class="up"><span class="icon arrowUp v-align-m"></span></div>25 <span class="smTxt">%</span></div>
 				</td>
 				<td class="wideSpan divider">
 					<div class="title">Employees<br/> Absent</div>
@@ -218,25 +218,25 @@
 							<span class="label">SORT BY:</span>
 							<span class="order">HIGHEST TO LOWEST</span>
 						</div>
-						<div class="dropdown span1" style="float:right;"><a href="javascript:;"></a>
+						<div class="dropdown span1" style="float:right;"><span class="icon arrowDown"></span>
 						</div>
 					</div>
-					<div class="filtering">
-						<ul>
+					<div class="filtering scrollable">
+						<ul class="">
 							<li><span class="label">Vacation |</span> 35% - 04 - $250
-								<img src="img/arrowRight.png" alt="Right Arrow">
+								<span class="icon arrowRight v-align-m right"></span>
 							</li>
 							<li><span class="label">Other |</span> 27% - 04 - $250
-								<img src="img/arrowRight.png" alt="Right Arrow">
+								<span class="icon arrowRight v-align-m right"></span>
 							</li>
 							<li><span class="label">FMLA |</span> 30% - 03 - $250
-								<img src="img/arrowRight.png" alt="Right Arrow">
+								<span class="icon arrowRight v-align-m right"></span>
 							</li>
 							<li><span class="label">STD |</span> 04% - 04 - $250
-								<img src="img/arrowRight.png" alt="Right Arrow">
+								<span class="icon arrowRight v-align-m right"></span>
 							</li>
 							<li><span class="label">LTD |</span> 04% - 04 - $250
-								<img src="img/arrowRight.png" alt="Right Arrow">
+								<span class="icon arrowRight v-align-m right"></span>
 							</li>
 						</ul>
 					</div>
@@ -250,14 +250,14 @@
 				<div class="dropdownTitle inline span"></div>
 				<div class="pin inline span"><img src="img/tack.png" alt=""></div>
 			</div>
-			<div class="list">
+			<div class="list uppl">
 				<div class="sort">
 					<div class="sortBy abType row">
 						<div class="span" style="margin-left:0;">
 							<span class="label">SORT BY:</span>
 							<span class="order">ABSENCE RISK</span>
 						</div>
-						<div class="dropdown span1" style="float:right;"><a href="javascript:;"></a>
+						<div class="dropdown span1" style="float:right;"><span class="icon arrowDown"></span>
 						</div>
 					</div>
 					<div class="cards scrollable">
@@ -266,15 +266,15 @@
 								<ul class="highab">
 									<li class="label">DAVID WALKER</li>
 									<li>INJURED ON THE JOB - 5 DAYS
-										<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+										<span class="icon arrowRight right v-align-m"></span>
 									</li>
 									<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
 									<li>
 										<ul class="icons row">
-											<li class="span"><img src="img/weight.png" alt="weight"></li>
-											<li class="nobw span nudge"><img src="img/calculator.png" alt="calculator"></li>
-											<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
-											<li class="span"><img src="img/razor.png" alt="razor"></li>
+											<li class="span"><span class="icon weight"></span></li>
+											<li class="nobw span nudge"><span class="icon calculator"></span></li>
+											<li class="span nudge"><span class="icon forklift"></span></li>
+											<li class="span nobw"><span class="icon razor"></span></li>
 										</ul>
 									</li>
 								</ul>
@@ -282,15 +282,15 @@
 							<div class="abBorder">
 								<ul class="medab">
 									<li class="label">JANET BENES</li>
-									<li>OTHER - 4 DAYS <span class="helpIcon"><img src="img/helpCounter.png" alt=""></span>
-										<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+									<li>OTHER - 4 DAYS <span class="icon helpIcon"></span>
+										<span class="icon arrowRight right v-align-m"></span>
 									</li>
 									<li class="smTxt">ROLE: WAREHOUSE CLERK</li>
 									<li>
 										<ul class="icons row">
-											<li class="span"><img src="img/calculator.png" alt="calculator"></li>
-											<li class="nobw span"><img src="img/phone.png" alt="phone"></li>
-											<li class="span"><img src="img/folder.png" alt="folder"></li>
+											<li class="span"><span class="icon calculator"></span></li>
+											<li class="nobw span"><span class="icon phone"></span></li>
+											<li class="span nobw"><span class="icon folder"></span></li>
 										</ul>
 									</li>
 								</ul>
@@ -298,16 +298,16 @@
 							<div class="abBorder">
 								<ul class="lowab">
 									<li class="label">CHRIS MARROTA</li>
-									<li>SICK - 2 DAYS <span class="helpIcon"><img src="img/helpCounter.png" alt=""></span>
-										<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+									<li>SICK - 2 DAYS <span class="icon helpIcon"></span>
+										<span class="icon arrowRight right v-align-m"></span>
 									</li>
 									<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
 									<li>
 										<ul class="icons row">
-											<li class="span"><img src="img/weight.png" alt="weight"></li>
-											<li class="nobw span nudge"><img src="img/calculator.png" alt="calculator"></li>
-											<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
-											<li class="span"><img src="img/razor.png" alt="razor"></li>
+											<li class="span"><span class="icon weight"></span></li>
+											<li class="nobw span nudge"><span class="icon calculator"></span></li>
+											<li class="span nudge"><span class="icon forklift"></span></li>
+											<li class="span nobw"><span class="icon razor"></span></li>
 										</ul>
 									</li>
 								</ul>
@@ -316,15 +316,15 @@
 								<ul class="lowab">
 									<li class="label">LIVIA VENEZIANO</li>
 									<li>SICK - 1 DAY
-										<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+										<span class="icon arrowRight right v-align-m"></span>
 									</li>
 									<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
 									<li>
 										<ul class="icons row">
-											<li class="span"><img src="img/weight.png" alt="weight"></li>
-											<li class="nobw span nudge"><img src="img/calculator.png" alt="calculator"></li>
-											<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
-											<li class="span"><img src="img/razor.png" alt="razor"></li>
+											<li class="span"><span class="icon weight"></span></li>
+											<li class="nobw span nudge"><span class="icon calculator"></span></li>
+											<li class="span nudge"><span class="icon forklift"></span></li>
+											<li class="span nobw"><span class="icon razor"></span></li>
 										</ul>
 									</li>
 								</ul>
@@ -333,15 +333,15 @@
 								<ul class="lowab">
 									<li class="label">CHRIS MARROTA</li>
 									<li>SICK - 2 DAYS <span class="helpIcon"></span>
-										<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+										<span class="icon arrowRight right v-align-m"></span>
 									</li>
 									<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
 									<li>
 										<ul class="icons row">
-											<li class="span"><img src="img/weight.png" alt="weight"></li>
-											<li class="nobw span nudge"><img src="img/calculator.png" alt="calculator"></li>
-											<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
-											<li class="span"><img src="img/razor.png" alt="razor"></li>
+											<li class="span"><span class="icon weight"></span></li>
+											<li class="nobw span nudge"><span class="icon calculator"></span></li>
+											<li class="span nudge"><span class="icon forklift"></span></li>
+											<li class="span nobw"><span class="icon razor"></span></li>
 										</ul>
 									</li>
 								</ul>
@@ -350,15 +350,15 @@
 								<ul class="lowab">
 									<li class="label">LIVIA VENEZIANO</li>
 									<li>SICK - 1 DAY
-										<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow">
+										<span class="icon arrowRight right v-align-m"></span>
 									</li>
 									<li class="smTxt">ROLE: WAREHOUSE ASSOCIATE</li>
 									<li>
 										<ul class="icons row">
-											<li class="span"><img src="img/weight.png" alt="weight"></li>
-											<li class="nobw span nudge"><img src="img/calculator.png" alt="calculator"></li>
-											<li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
-											<li class="span"><img src="img/razor.png" alt="razor"></li>
+											<li class="span"><span class="icon weight"></span></li>
+											<li class="nobw span nudge"><span class="icon calculator"></span></li>
+											<li class="span nudge"><span class="icon forklift"></span></li>
+											<li class="span nobw"><span class="icon razor"></span></li>
 										</ul>
 									</li>
 								</ul>
@@ -375,14 +375,14 @@
 				<div class="dropdownTitle inline span margin-left-none"></div>
 				<div class="pin inline span"><img src="img/tack.png" alt=""></div>
 			</div>
-			<div class="list">
+			<div class="list uppl">
 				<div class="sort">
 					<div class="sortBy abType row">
 						<div class="span" style="margin-left:0;">
 							<span class="label">SORT BY:</span>
 							<!--<span class="order">ABSENCE RISK</span>-->
 						</div>
-						<div class="dropdown span1" style="float:right;"><a href="javascript:;"></a>
+						<div class="dropdown span1" style="float:right;"><span class="icon arrowDown"></span>
 						</div>
                         <select ng-model="orderProp">
                             <option value="employee_name">Name</option>
@@ -396,14 +396,14 @@
 
                             <ul class="noab" style="border-bottom: none;" ng-repeat="elem in dataset | orderBy:orderProp">
                                 <li class="label upcs">{{ elem.employee_name }}</li>
-                                <li class="upcs">{{ isFmla(elem) }} - {{ isDays(elem.leave_days) }}<img class="arrowRight" src="img/arrowRight.png" alt="Right Arrow"></li>
+                                <li class="upcs">{{ isFmla(elem) }} - {{ isDays(elem.leave_days) }}<span class="icon arrowRight right v-align-m"></span></li>
                                 <li class="smTxt">{{ 'Role: WAREHOUSE ASSOCIATE' }}</li>
 
                                 <ul class="icons row">
-                                    <li class="span"><img src="img/weight.png" alt="weight"></li>
-                                    <li class="span nudge nobw"><img src="img/calculator.png" alt="calculator"></li>
-                                    <li class="span nudge"><img src="img/forklift.png" alt="forklift"></li>
-                                    <li class="span"><img src="img/razor.png" alt="razor"></li>
+                                    <li class="span"><span class="icon weight"></span></li>
+									<li class="nobw span nudge"><span class="icon calculator"></span></li>
+									<li class="span nudge"><span class="icon forklift"></span></li>
+									<li class="span nobw"><span class="icon razor"></span></li>
                                 </ul>
                             </ul>
 						</div>
