corrected border under piechart

--- a/app/index.html
+++ b/app/index.html
@@ -208,12 +208,12 @@
 				<div class="dropdownTitle inline span"><a href="javascript:;"></a></div>
 				<div class="pin inline span"><span class="icon tack"></span></div>
 			</div>
-			<div class="graph piechart block">
+			<div class="graph piechart">
 				<img src="img/piechart.jpg" alt="pie chart"/>
 			</div>
 			<div class="list">
 				<div class="sort">
-					<div class="sortBy row">
+					<div class="sortBy row block">
 						<div class="span" style="margin-left:0;">
 							<span class="label">SORT BY:</span>
 							<span class="order">HIGHEST TO LOWEST</span>
